--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
 	<groupId>org.walkmod</groupId>
 	<artifactId>walkmod-setter-getter-plugin</artifactId>
 	<version>1.0</version>
+	<url>https://github.com/rpau/walkmod-setter-getter-plugin</url>
+	<licenses>
+		<license>
+			<name>GNU General Public License (GPL v.3)</name>
+			<url>http://www.gnu.org/licenses/gpl.txt</url>
+		</license>
+	</licenses>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
@@ -20,13 +27,37 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
 			<groupId>org.walkmod</groupId>
 			<artifactId>javalang</artifactId>
-			<version>[2.0.0, 3.0.0)</version>
+			<version>[2.0, 3.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.walkmod</groupId>
@@ -82,4 +113,5 @@
 			<email>acoroleu@gmail.com</email>
 		</developer>
 	</developers>
+	<description>Walkmod plugin to add setters and getters into Java source files.</description>
 </project>
